# ClaudeAgents

./: .editorconfig  .gitignore  .gitmodules  .streamguardrc.json.example  AGENTS.md  ATTRIBUTIONS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALLATION.md  Makefile  OLYMPUS-BOOTSTRAP-README.md  PI-START.txt  PLAN.md  README.md  SECURITY.md  build-plugin.sh  bump-version.sh  bunfig.toml  install.sh  package.json  pyproject.toml  tsconfig.base.json  tsconfig.json  uninstall.sh  upstream-sources.lock.json
.claude-plugin/: marketplace.json  plugin.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.pi/: settings.json
agents/: architect.md  atalanta.md  athena.md  audit.md  calliope.md  coder.md  document.md  hephaestus.md  hermes.md  implement.md  implementer.md  indexer.md  investigate.md  nemesis.md  odysseus.md  orchestrate.md  scribe.md  test.md  verifier.md  verify.md
claude/: CLAUDE.md
codex/: README.md
commands/: team-debug.md  team-feature.md  team-refactor.md  team-review.md  team-ship.md
constraints/: enterprise.md  max.md  pro.md  shared.md  zen.md
crates/oal-runner/: Cargo.toml
crates/oal-runner/src/: artifact.rs  budget.rs  error.rs  intent.rs  lib.rs  main.rs  summary.rs
crates/oal-runner/src/budget/: tests.rs
crates/oal-runner/src/intent/: tests.rs
crates/oal-runner/src/summary/: tests.rs
docs/: 00_EXECUTIVE_FINDINGS.md  00_INDEX.md  00_README_INDEX.md  01_CURRENT_STATE_V3_AUDIT.md  01_V3_EVIDENCE_AUDIT.md  02-cli.md  02_OAL_REBOOT_PRODUCT_REQUIREMENTS.md  02_V3_SUCCEEDED_VS_FAILED.md  MANIFEST.md  (+41 more)
(+921 files in other folders)
